implements basic BLE scanner function